[package]
name = "easy_hash"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["bevy_ecs"]
nalgebra = []
ordered_float = []
rapier = []
default = ["nalgebra", "ordered_float", "rapier", "godot"]
godot = []

[dependencies]
easy_hash_derive = { path = "../easy_hash_derive" }
fletcher = "1.0"
bytemuck = "1.22.0"
const-fnv1a-hash = "1.1.0"
bevy_ecs = { version = "0.14", optional = true }
nalgebra = "0.34"
ordered-float = "5.0"
godot = { version = "0.4.4", features = [
  "register-docs",
  "experimental-threads",
] }


rapier2d = { git = "https://github.com/bcolloran/rapier.git", branch = "my-changes-3", features = [
  "serde-serialize",
  "enhanced-determinism",
] }


[dev-dependencies]
test-case = "3.3.1"
